# sosco_wmr

./: README.md
WMR/: WMR.pro
WMR/include/: BasicUtils.h  WmrMovementProtocol.h  WmrPose.h  WmrSharpSensorProtocol.h  statusreceiver.h  wmr.h  wmr_global.h  wmrrobot.h  wmrrobotconnector.h  wmrsettings.h  wmrudpconnection.h
WMR/src/: statusreceiver.cpp  wmr.cpp  wmrrobot.cpp  wmrrobotconnector.cpp  wmrsettings.cpp  wmrudpconnection.cpp
wmr_ros/: CMakeLists.txt
wmr_ros/include/wmr_ros/: qnode.hpp
wmr_ros/src/: main.cpp  qnode.cpp
